baculum: Add API changes to support restore from copy jobs
